# tic-tac-toe

./: BasePresets.json  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  main.cpp
.github/workflows/: build.yml
cmake/Modules/: Version.cmake
files/: field.txt
